--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/EditOrCreateCardsetPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/EditOrCreateCardsetPage.xaml
@@ -203,18 +203,13 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <!-- Left Column -->
         <Grid Grid.Column="0" Margin="10,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <!-- For name -->
                 <RowDefinition Height="Auto"/>
-                <!-- For toggle -->
                 <RowDefinition Height="*"/>
-                <!-- For card list -->
             </Grid.RowDefinitions>
 
-            <!-- Cardset Name -->
             <TextBox x:Name="CardsetName"
                      Text="Змінюване ім'я" 
                      Style="{StaticResource ModernTextBoxStyle}"
@@ -223,7 +218,6 @@
                      Height="50"
                      Margin="0,3,10,3" />
 
-            <!-- Toggle -->
             <StackPanel Grid.Row="1" 
                         Orientation="Horizontal" 
                         Margin="0,10,0,10"
@@ -239,7 +233,6 @@
                              IsChecked="True"/>
             </StackPanel>
 
-            <!-- Cards List -->
             <ScrollViewer Grid.Row="2" 
                           VerticalScrollBarVisibility="Auto" 
                           HorizontalScrollBarVisibility="Disabled">
@@ -253,7 +246,7 @@
                                         Click="CardButton_Click">
                                     <TextBox Text="{Binding WordEn}"
                                              Style="{StaticResource CardTextBoxStyle}"
-                                             IsReadOnly="False"/>
+                                             IsReadOnly="True"/>
                                 </Button>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
@@ -264,14 +257,12 @@
             </ScrollViewer>
         </Grid>
 
-        <!-- Right Column -->
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <!-- Edit Card Section -->
             <StackPanel Grid.Row="1" 
                         VerticalAlignment="Center" 
                         HorizontalAlignment="Center">
