--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/TestPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/TestPage.xaml
@@ -75,9 +75,25 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Back" 
-                Style="{StaticResource BackButtonStyle}"
-                Click="BackButton_Click"/>
+        <Button Grid.Row="0"
+                Height="32"
+                Width="32"
+                Margin="0,12,0,12"
+                HorizontalAlignment="Left"
+                Cursor="Hand"
+                Click="BackButton_Click">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="Transparent">
+                        <Path Data="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
+                              Fill="#808080"
+                              Width="24"
+                              Height="24"
+                              Stretch="Uniform"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
         <Grid Grid.Row="1" Margin="0,10,0,20">
             <Grid.ColumnDefinitions>
