--- a/WordSnapConsoleApp/WordSnapWPFApp/MainWindow.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WordSnapWPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="900" ResizeMode="NoResize">
+        Title="WordSnap" Height="600" Width="900" ResizeMode="NoResize">
     <Window.Resources>
         <Style x:Key="WordSnapButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
