added comments on card flip and a button to delete a cardset from the saved collection

--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/CardsetPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/CardsetPage.xaml
@@ -239,6 +239,12 @@
                                    VerticalAlignment="Center" 
                                    FontSize="20" 
                                    Margin="20" />
+                        <TextBlock x:Name="CardComment"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Bottom"
+                                   FontSize="12"
+                                   FontFamily="Bahnschrift"
+                                   Margin="20"/>
                     </Grid>
                 </Border>
             </StackPanel>
