--- a/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/CardsetPage.xaml
+++ b/WordSnapConsoleApp/WordSnapWPFApp/Presentation/Pages/CardsetPage.xaml
@@ -228,29 +228,35 @@
                         VerticalAlignment="Center" 
                         HorizontalAlignment="Center">
                 <Border Height="200" 
-        Width="340" 
-        Margin="0,10" 
-        CornerRadius="30" 
-        Background="#CCCCCC" 
-        MouseDown="CardInfo_Click">
+                        Width="340" 
+                        Margin="0,10" 
+                        CornerRadius="30" 
+                        Background="#CCCCCC" 
+                        MouseDown="CardInfo_Click">
                     <Border.RenderTransform>
                         <ScaleTransform x:Name="CardFlipTransform" ScaleX="1" ScaleY="1" CenterX="170" CenterY="100"/>
                     </Border.RenderTransform>
                     <Grid>
                         <Grid x:Name="FrontSide" Visibility="Visible">
                             <TextBlock x:Name="CardInfo"
-                       HorizontalAlignment="Center" 
-                       VerticalAlignment="Center" 
-                       FontSize="20" 
-                       FontWeight="Bold" />
+                                       HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center" 
+                                       FontSize="20" 
+                                       FontWeight="Bold" />
                         </Grid>
 
                         <Grid x:Name="BackSide" Visibility="Collapsed">
+                            <TextBlock x:Name="CardTranslation"
+                                       HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center" 
+                                       FontSize="20" 
+                                       FontWeight="Bold"/>
                             <TextBlock x:Name="CardComment"
-                       HorizontalAlignment="Center" 
-                       VerticalAlignment="Center" 
-                       FontSize="20" 
-                       FontWeight="Bold" />
+                                       HorizontalAlignment="Center" 
+                                       VerticalAlignment="Bottom"
+                                       Margin="20"
+                                       FontSize="12"
+                                       FontFamily="Bahnschrift"/>
                         </Grid>
                     </Grid>
                 </Border>
